--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,7 @@
 .Header {
-  background-color: var(--color-canopy-primary-dark);
+  background-color: var(--color-canopy-primary);
   color: var(--color-background-main);
-  font-size: 0.66em;
+  font-size: 1em;
 }
 
 .Header > h1 {
