--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,24 @@
 
 .App .section {
   clear: both;
-  margin-top: 1em;
+  margin-top: 2em;
+}
+
+.App .section-secondary {
+  padding: 0.5em 2em;
+  border-radius: 0.05em;
+  background-color: var(--color-background-secondary);
 }
 
 .App .section h3 {
-  margin-bottom: 0.25em;
+  margin-bottom: 1em;
+  border: 2px solid var(--color-canopy-primary);
+  border-radius: 0.05em;
+  width: 10em;
+  padding: 0.5em;
+  text-align: center;
+}
+
+.App .section-secondary h3 {
+  margin: 1em auto;
 }
