--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --color-background-main: #F7F7F7;
+  --color-background-secondary: rgba(211, 211, 211, 0.3);
   --color-canopy-danger: #D1495B;
   --color-canopy-primary: #6AC7FD;
   --color-canopy-primary-dark: #306BAC;
@@ -14,6 +15,7 @@ body {
   color: var(--color-text-main);
   font-family: var(--style-font-main);
   font-size: 16px;
+  letter-spacing: 0.01em;
   line-height: 1.5;
   margin: 0;
   padding: 0;
@@ -36,6 +38,6 @@ li {
 .content-aligned {
   margin: 0 auto;
   min-width: 310px;
-  max-width: 960px;
+  max-width: 1024px;
   width: 90%;
 }
