--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   width: 10em;
   padding: 0.5em;
   text-align: center;
+  color: var(--color-canopy-primary);
 }
 
 .App .section-secondary h3 {
