--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,9 +1,9 @@
 .Header {
   background-color: var(--color-canopy-primary);
   color: var(--color-background-main);
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
 .Header > h1 {
-  padding: 0.5em 0 0.5em 0;
+  padding: 0.4em 0;
 }
