--- a/src/components/JobInfo.css
+++ b/src/components/JobInfo.css
@@ -1,5 +1,8 @@
 .JobInfo {
-  font-size: 1.25em;
-  margin: 2em 0;
+  font-size: 1.1em;
+  text-align: center;
+  margin-bottom: 4em;
+  padding: 1em;
+  border-bottom: 1px solid var(--color-separator-main);
 }
 .JobInfo > h2 { color: var(--color-canopy-success); }
