--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --color-canopy-success: #7EBC89;
   --color-text-main: #37474f;
   --color-text-link: var(--canopy-color-primary);
+  --color-separator-main: #c7c7c7;
   --style-font-main: "Avenir Next", Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
 }
 
