--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --color-background-secondary: rgba(211, 211, 211, 0.3);
   --color-canopy-danger: #D1495B;
   --color-canopy-primary: #6AC7FD;
-  --color-canopy-primary-dark: #306BAC;
+  --color-canopy-primary-dark: #34495e;
   --color-canopy-success: #7EBC89;
   --color-text-main: #37474f;
   --color-text-link: var(--canopy-color-primary);
@@ -25,6 +25,9 @@ body {
 a {
   color: var(--color-text-link);
   text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 ul, ol {
