added three column grid to page layout

--- a/src/components/ScheduledItem.css
+++ b/src/components/ScheduledItem.css
@@ -6,3 +6,9 @@
 .ScheduledItem.completed:hover {
   color: var(--color-canopy-danger);
 }
+
+@media (max-width: 850px) {
+  .ScheduledItems ul {
+    width: 100%;
+  }
+}
