--- a/src/components/Photos.css
+++ b/src/components/Photos.css
@@ -1,9 +1,7 @@
-.Photos { overflow: hidden; }
-
 .Photos > .grid > .image-tile {
   float: left;
-  height: 10em;
-  width: 10em;
+  height: 8em;
+  width: 8em;
   margin-right: 1em;
   position: relative;
   text-align: center;
@@ -25,4 +23,12 @@
   padding: 0.25em;
   position: absolute;
   width: calc(100% - 0.5em);
+}
+
+@media (max-width: 1000px) {
+  .Photos > .grid > .image-tile {
+    margin-bottom: 1em;
+    height: 14em;
+    width: 14em;
+  }
 }
