--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,27 @@ li {
 .content-aligned {
   margin: 0 auto;
   min-width: 310px;
-  max-width: 1024px;
+  max-width: 1100px;
   width: 90%;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.flex-grid-thirds {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex-grid-thirds .col {
+  width: 32%;
+  margin-bottom: 5em;
+}
+
+@media (max-width: 850px) {
+  .flex-grid-thirds {
+    display: block;
+    clear: both;
+  }
 }
