--- a/src/components/Photos.css
+++ b/src/components/Photos.css
@@ -1,8 +1,7 @@
 .Photos > .grid > .image-tile {
-  float: left;
   height: 8em;
   width: 8em;
-  margin-right: 1em;
+  margin-left: 1em;
   position: relative;
   text-align: center;
 }
