--- a/src/components/ScheduledItem.css
+++ b/src/components/ScheduledItem.css
@@ -7,6 +7,10 @@
   color: var(--color-canopy-danger);
 }
 
+.ScheduledItems ul {
+  padding-left: 1.5em;
+}
+
 @media (max-width: 850px) {
   .ScheduledItems ul {
     width: 100%;
