--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,15 @@ li {
   display: inline-block;
 }
 
+.bg-color-lightgray {
+  background-color: var(--color-background-secondary);
+}
+
+.card {
+  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
+  border-radius: 0.05em;
+}
+
 .flex-grid-thirds {
   display: flex;
   justify-content: space-between;
@@ -64,5 +73,8 @@ li {
   .flex-grid-thirds {
     display: block;
     clear: both;
+  }
+  .flex-grid-thirds .col {
+    width: 100%;
   }
 }
