--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -24,6 +24,10 @@
   cursor: pointer;
 }
 
+.Comment > div > span:hover {
+  color: var(--color-canopy-danger);
+}
+
 @media (max-width: 650px) {
   .Comment > div > p {
     width: 75%;
