updated scheduled item styling to not have red color or cursor pointer when it is completed. Also, item is a lighter color when completed vs not completed

--- a/src/components/ScheduledItem.css
+++ b/src/components/ScheduledItem.css
@@ -1,10 +1,10 @@
-.ScheduledItem:hover {
+.ScheduledItem:not(.completed):hover {
   color: var(--color-canopy-success);
   cursor: pointer;
-  display: inline-block;
 }
-.ScheduledItem.completed:hover {
-  color: var(--color-canopy-danger);
+
+.ScheduledItem.completed {
+  color: var(--color-text-secondary);
 }
 
 .ScheduledItems ul {
